# nexus-ai-proofreading

./: .pre-commit-config.yaml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
.github/workflows/: pyright.yaml  ruff.yaml
app/: hello.py
