[project]
name = "ai-proofreading-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "fastapi>=0.115.8",
    "pydantic-settings>=2.8.0",
    "pyright>=1.1.394",
    "pytest>=8.3.4",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "alembic>=1.14.1",
    "pre-commit>=4.1.0",
]
